--- a/index.html
+++ b/index.html
@@ -2,27 +2,75 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="" content="Visualization of survey data about etiquette while flying">
     <title>IV SoSe 18</title>
+    <script src="vendors/jquery/dist/jquery.min.js"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap-theme.min.css">
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="vendors/bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="resources/css/styles.css">
 </head>
 
 <body>
 
+
 	<header>
-	
+
 	</header>
-	
-	
-	<nav>
-	</nav>
-	
-	
+
+
+  <!-- Fixed navbar -->
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">LOGO</a>
+      </div>
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a class="active" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li>
+            <a href="#">Children</a>
+          </li>
+          <li>
+            <a href="#seat">Seat</a>
+          </li>
+          <li>
+            <a href="#reclining">Seat Reclining</a>
+          </li>
+          <li>
+            <a href="#communication">Communication</a>
+          </li>
+          <li>
+            <a href="#switching">Switching Seats</a>
+          </li>
+          <li>
+            <a href="#verbotenes">Verbotenes</a>
+          </li>
+        </ul>
+      </div><!--/.nav-collapse -->
+    </div>
+  </nav>
+
+
+
 	<main>
-	
+
 	</main>
-	
-	
-    
+
+
+
 
 
     <!-- Scripts should be loaded when the dom model is done and thus are included at the bottom -->
