--- a/index.html
+++ b/index.html
@@ -24,44 +24,46 @@
 
 
   <!-- Fixed navbar -->
-  <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">LOGO</a>
+  <div class="row">
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">LOGO</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a class="active" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li>
+              <a href="#">Children</a>
+            </li>
+            <li>
+              <a href="#seat">Seat</a>
+            </li>
+            <li>
+              <a href="#reclining">Seat Reclining</a>
+            </li>
+            <li>
+              <a href="#communication">Communication</a>
+            </li>
+            <li>
+              <a href="#switching">Switching Seats</a>
+            </li>
+            <li>
+              <a href="#verbotenes">Violations</a>
+            </li>
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
-      <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li>
-            <a class="active" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li>
-            <a href="#">Children</a>
-          </li>
-          <li>
-            <a href="#seat">Seat</a>
-          </li>
-          <li>
-            <a href="#reclining">Seat Reclining</a>
-          </li>
-          <li>
-            <a href="#communication">Communication</a>
-          </li>
-          <li>
-            <a href="#switching">Switching Seats</a>
-          </li>
-          <li>
-            <a href="#verbotenes">Verbotenes</a>
-          </li>
-        </ul>
-      </div><!--/.nav-collapse -->
-    </div>
-  </nav>
+    </nav>
+ </div>
 
 
 
