--- a/communication.html
+++ b/communication.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="" content="Visualization of survey data about etiquette while flying">
     <title>Communication</title>
+	<script src="vendors/jquery/dist/jquery.min.js"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap-theme.min.css">
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="vendors/bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="resources/css/styles.css">
 </head>
 
@@ -14,6 +21,47 @@
 	<header>
 
 	</header>
+	<!-- Fixed navbar -->
+  <div class="row">
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">LOGO</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a href="index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li>
+              <a href="children.html">Children</a>
+            </li>
+            <li>
+              <a href="seat.html">Seat</a>
+            </li>
+            <li>
+              <a href="reclining.html">Seat Reclining</a>
+            </li>
+            <li>
+              <a class="active" href="communication.htm">Communication</a>
+            </li>
+            <li>
+              <a href="switching.html">Switching Seats</a>
+            </li>
+            <li>
+              <a href="violations.html">Violations</a>
+            </li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+  </div>
 
 
   
