--- a/communication.html
+++ b/communication.html
@@ -49,7 +49,7 @@
               <a href="reclining.html">Seat Reclining</a>
             </li>
             <li>
-              <a class="active" href="communication.htm">Communication</a>
+              <a class="active" href="communication.html">Communication</a>
             </li>
             <li>
               <a href="switching.html">Switching Seats</a>
