--- a/violations.html
+++ b/violations.html
@@ -50,7 +50,7 @@
               <a href="reclining.html">Seat Reclining</a>
             </li>
             <li>
-              <a href="communication.htm">Communication</a>
+              <a href="communication.html">Communication</a>
             </li>
             <li>
               <a href="switching.html">Switching Seats</a>
