--- a/children.html
+++ b/children.html
@@ -21,7 +21,7 @@
 	<header>
 
 	</header>
-	
+
   <!-- Fixed navbar -->
   <div class="row">
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -65,11 +65,12 @@
   </div>
 
 
-  
-
-
-
 	<main>
+    <h1 style="padding-top: 40px">Children</h1>
+    <h2>In general, is itrude to bring a baby on a plane?</h2>
+    <svg id = "babyBubbleChart"></svg>
+
+
 
 	</main>
 
@@ -81,6 +82,6 @@
     <!-- reasons: script error doesnt lead to blank page; receiving and parsing large scripts increases load time -->
     <!-- dom model is ready and modifiable -->
     <script src="./vendors/d3/d3.js"></script>
-    <script src="flying_etiquette.js"></script>
+    <script src="resources/js/flying_etiquette.js"></script>
 </body>
 </html>
