--- a/seat.html
+++ b/seat.html
@@ -79,13 +79,13 @@
               </div>
             <div class ="card-content">
               <form class ="gender-filter">
-                <label class="radio-inline">
-                    <input type="radio" name="optradio" id="woman">
-                      <i class="fas fa-female"></i>
-                    </label>
-                <label class="radio-inline">
-                  <input type="radio" name="optradio" id ="man">
-                    <i class="fas fa-male"></i>
+                <input type="checkbox" class="form-check-input" id="woman">
+                  <label class="radio-inline mr3">
+                    <i class="fas fa-female"></i>
+                  </label>
+                <input type="checkbox" class="form-check-input" id ="man">
+                 <label class="radio-inline">
+                   <i class="fas fa-male"></i>
                 </label>
              </form>
              <div class="dropdown mt3">
