--- a/children.html
+++ b/children.html
@@ -151,6 +151,31 @@
                        <li><a href="#">Pacific</a></li>
                      </ul>
                   </div>
+                  <div class="dropdown mt3">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                      <i class="fas fa-couch"></i>&nbsp; Frequency of seat reclining
+                      <span class="caret"></span></button>
+                      <ul class="dropdown-menu">
+                        <li><a href="#">Never</a></li>
+                        <li><a href="#">Once in a while</a></li>
+                        <li><a href="#">About half the time</a></li>
+                        <li><a href="#">Usually</a></li>
+                        <li><a href="#">Always</a></li>
+                      </ul>
+                   </div>
+                   <div class="special-filter">
+                    <form class ="child-filter mt3">
+                      <input type="checkbox" class="form-check-input" name="optradio" id="child">
+                        <label class="radio-inline">
+                          <i class="fas fa-child"></i>
+                        <!--  <p id="baby-explanation">Does the participant have children?</p>-->
+                        </label>
+                   </form>
+                   <div class="slidecontainer mt2">
+                     <input type="range" min="1" max="100" value="0" class="slider mt2" id="height">
+                     <p class="current-value mt2">Height: </p>
+                   </div>
+                 </div>
                 </card-content>
               </div>
             </div>
