--- a/children.html
+++ b/children.html
@@ -66,18 +66,21 @@
   </div>
 
 
-  
+
 
 	<main>
     <h1 style="padding-top: 40px">Children</h1>
-    <h2>In general, is itrude to bring a baby on a plane?</h2>
-    <svg id = "babyBubbleChart"></svg>
+
 
 
 
 
     <div class ="standardFilters">
       <div class="row mt10 ml2">
+        <div class = "col-sm-8 col-md-9 col-lg-9">
+          <h2>In general, is itrude to bring a baby on a plane?</h2>
+          <svg id = "babyBubbleChart"></svg>
+        </div>
         <div class="col-sm-8 col-md-3 col-lg-3">
           <div class ="card">
               <div class ="card-block">
