--- a/children.html
+++ b/children.html
@@ -77,9 +77,11 @@
 
     <div class ="standardFilters">
       <div class="row mt10 ml2">
-        <div class = "col-sm-8 col-md-9 col-lg-9">
-          <h2>In general, is itrude to bring a baby on a plane?</h2>
-          <svg id = "babyBubbleChart"></svg>
+        <h2>In general, is itrude to bring a baby on a plane?</h2>
+        <div class = "col-sm-8 col-md-9 col-lg-7">
+          <svg class = "ml6 mr6" id = "babyBubbleChart"></svg>
+        </div>
+        <div class = "col-lg-1">
         </div>
         <div class="col-sm-8 col-md-3 col-lg-3">
           <div class ="card">
