--- a/seat.html
+++ b/seat.html
@@ -79,11 +79,11 @@
               </div>
             <div class ="card-content">
               <form class ="gender-filter">
-                <input type="checkbox" class="form-check-input" id="woman">
+                <input type="checkbox" class="form-check-input" id="female">
                   <label class="radio-inline mr3">
                     <i class="fas fa-female"></i>
                   </label>
-                <input type="checkbox" class="form-check-input" id ="man">
+                <input type="checkbox" class="form-check-input" id ="male">
                  <label class="radio-inline">
                    <i class="fas fa-male"></i>
                 </label>
