--- a/children.html
+++ b/children.html
@@ -182,7 +182,7 @@
                         </label>
                    </form>
                    <div class="slidecontainer mt2">
-                     <input type="range" min="1" max="100" value="0" class="slider mt2" id="height">
+                     <input type="range" min="<5" max=">6'6" value="0" class="slider mt2" id="height">
                      <p class="current-value mt2">Height: </p>
                    </div>
                  </div>
