--- a/seat.html
+++ b/seat.html
@@ -93,11 +93,11 @@
                  <i class="fas fa-plane"></i>&nbsp;Frequency of air travel
                  <span class="caret"></span></button>
                  <ul class="dropdown-menu">
-                   <li><a href="#">Once a year or less</a></li>
-                   <li><a href="#">Once a month or less</a></li>
-                   <li><a href="#">A few times per month</a></li>
-                   <li><a href="#">A few times per week</a></li>
-                   <li><a href="#">Every day</a></li>
+                   <li><a>Once a year or less</a></li>
+                   <li><a>Once a month or less</a></li>
+                   <li><a>A few times per month</a></li>
+                   <li><a>A few times per week</a></li>
+                   <li><a>Every day</a></li>
                  </ul>
               </div>
               <div class="dropdown mt3">
@@ -105,10 +105,10 @@
                   <i class="fas fa-birthday-cake"></i>&nbsp; Age
                   <span class="caret"></span></button>
                   <ul class="dropdown-menu">
-                    <li><a href="#">18-29</a></li>
-                    <li><a href="#">30-44</a></li>
-                    <li><a href="#">45-60</a></li>
-                    <li><a href="#">>60</a></li>
+                    <li><a>18-29</a></li>
+                    <li><a>30-44</a></li>
+                    <li><a>45-60</a></li>
+                    <li><a>>60</a></li>
                   </ul>
                </div>
                <div class="dropdown mt3">
@@ -116,11 +116,11 @@
                    <i class="fas fa-dollar-sign"></i>&nbsp; Income
                    <span class="caret"></span></button>
                    <ul class="dropdown-menu">
-                     <li><a href="#">$0 - $24,999</a></li>
-                     <li><a href="#">$25,000 - $49,999</a></li>
-                     <li><a href="#">$50,000 - $99,999</a></li>
-                     <li><a href="#">$100,000 - $149,999	</a></li>
-                     <li><a href="#">$150000</a></li>
+                     <li><a>$0 - $24,999</a></li>
+                     <li><a>$25,000 - $49,999</a></li>
+                     <li><a>$50,000 - $99,999</a></li>
+                     <li><a>$100,000 - $149,999	</a></li>
+                     <li><a>$150000</a></li>
                    </ul>
                 </div>
                 <div class="dropdown mt3">
@@ -128,10 +128,10 @@
                     <i class="fas fa-graduation-cap"></i>&nbsp; Education
                     <span class="caret"></span></button>
                     <ul class="dropdown-menu">
-                      <li><a href="#">High school degree</a></li>
-                      <li><a href="#">Some college or Associate degree</a></li>
-                      <li><a href="#">Graduate degree</a></li>
-                      <li><a href="#">Bachelor degree</a></li>
+                      <li><a>High school degree</a></li>
+                      <li><a>Some college or Associate degree</a></li>
+                      <li><a>Graduate degree</a></li>
+                      <li><a>Bachelor degree</a></li>
                     </ul>
                  </div>
                  <div class="dropdown mt3">
@@ -139,15 +139,15 @@
                      <i class="fas fa-map-marker"></i>&nbsp; Location
                      <span class="caret"></span></button>
                      <ul class="dropdown-menu">
-                       <li><a href="#">New England</a></li>
-                       <li><a href="#">East North Central</a></li>
-                       <li><a href="#">East South Central</a></li>
-                       <li><a href="#">West North Central</a></li>
-                       <li><a href="#">West South Central</a></li>
-                       <li><a href="#">Middle Atlantic</a></li>
-                       <li><a href="#">South Atlantic</a></li>
-                       <li><a href="#">Mountain</a></li>
-                       <li><a href="#">Pacific</a></li>
+                       <li><a>New England</a></li>
+                       <li><a>East North Central</a></li>
+                       <li><a>East South Central</a></li>
+                       <li><a>West North Central</a></li>
+                       <li><a>West South Central</a></li>
+                       <li><a>Middle Atlantic</a></li>
+                       <li><a>South Atlantic</a></li>
+                       <li><a>Mountain</a></li>
+                       <li><a>Pacific</a></li>
                      </ul>
                   </div>
                 </card-content>
