structure start diagram
The code is now separted into the MVC pattern (manager corresponds with view right now), the needed data for the diagram can now be accessed via the model code

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     <script src="./vendors/d3/d3.js"></script>
     <script src="./resources/js/FlyingEtiquette.js"></script>
     <script src="./resources/js/StartDiagramManager.js"></script>
+    <script src="./resources/js/StartDiagramModel.js"></script>
     <script> 
             FlyingEtiquette.init()
     </script>
