--- a/children.html
+++ b/children.html
@@ -69,21 +69,29 @@
 
 
 	<main>
-    <h1 style="padding-top: 40px">Children</h1>
 
+    <div class="row mt3 ml5">
+      <div class = "col-sm-12 col-md-12 col-lg-12">
+        <h1 class = "categoryHeading" style="padding-top: 40px">Children</h1>
+      </div>
+    </div>
 
 
 
 
     <div class ="standardFilters">
-      <div class="row mt10 ml2">
-        <h2>In general, is itrude to bring a baby on a plane?</h2>
-        <div class = "col-sm-8 col-md-9 col-lg-7">
+      <div class="row mt2 ml5">
+        <div class = "col-sm-8 col-md-7 col-lg-7">
+          <h2 class = "bubbleQuestion">In general, is itrude to bring a baby on a plane?</h2>
+        </div>
+      </div>
+      <div class="row mt3 ml2 mr2">
+        <div class = "col-sm-8 col-md-7 col-lg-7">
           <svg class = "ml6 mr6" id = "babyBubbleChart"></svg>
         </div>
         <div class = "col-lg-1">
         </div>
-        <div class="col-sm-8 col-md-3 col-lg-3">
+        <div class="col-sm-8 col-md-4 col-lg-4">
           <div class ="card">
               <div class ="card-block">
                 <h2 class ="card-title">Filter</h2>
