--- a/children.html
+++ b/children.html
@@ -112,7 +112,10 @@
                  <i class="fas fa-plane"></i>&nbsp;Frequency of air travel
                  <span class="caret"></span></button>
                  <ul class="dropdown-menu">
-                   &nbsp;&nbsp;<i class="fas fa-plane"></i>&nbsp;Frequency of air travel
+                   <li><a>
+                         <i class="fas fa-plane"></i>&nbsp;Frequency of air travel
+                       </a>
+                      </li>
                    <li class="divider"></li>
                    <li><a>Once a year or less</a></li>
                    <li><a>Once a month or less</a></li>
@@ -126,7 +129,10 @@
                   <i class="fas fa-birthday-cake"></i>&nbsp; Age
                   <span class="caret"></span></button>
                   <ul class="dropdown-menu">
-                    &nbsp;&nbsp;<i class="fas fa-birthday-cake"></i>&nbsp; Age
+                    <li><a>
+                         <i class="fas fa-birthday-cake"></i>&nbsp; Age
+                       </a>
+                      </li>
                     <li class="divider"></li>
                     <li><a>18-29</a></li>
                     <li><a>30-44</a></li>
@@ -139,7 +145,10 @@
                    <i class="fas fa-dollar-sign"></i>&nbsp; Income
                    <span class="caret"></span></button>
                    <ul class="dropdown-menu">
-                     &nbsp;&nbsp;<i class="fas fa-dollar-sign"></i>&nbsp; Income
+                     <li><a>
+                        <i class="fas fa-dollar-sign"></i>&nbsp; Income
+                       </a>
+                      </li>
                      <li class="divider"></li>
                      <li><a>$0 - $24,999</a></li>
                      <li><a>$25,000 - $49,999</a></li>
@@ -153,7 +162,10 @@
                     <i class="fas fa-graduation-cap"></i>&nbsp; Education
                     <span class="caret"></span></button>
                     <ul class="dropdown-menu">
-                      &nbsp;&nbsp;<i class="fas fa-graduation-cap"></i>&nbsp; Education
+                      <li><a>
+                         <i class="fas fa-graduation-cap"></i>&nbsp; Education
+                       </a>
+                      </li>
                       <li class="divider"></li>
                       <li><a>High school degree</a></li>
                       <li><a>Some college or Associate degree</a></li>
@@ -166,7 +178,10 @@
                      <i class="fas fa-map-marker"></i>&nbsp; Location
                      <span class="caret"></span></button>
                      <ul class="dropdown-menu">
-                       &nbsp;&nbsp;<i class="fas fa-map-marker"></i>&nbsp; Location
+                       <li><a>
+                          <i class="fas fa-map-marker"></i>&nbsp; Location
+                        </a>
+                       </li>
                        <li class="divider"></li>
                        <li><a>New England</a></li>
                        <li><a>East North Central</a></li>
@@ -184,7 +199,10 @@
                       <i class="fas fa-couch"></i>&nbsp; Frequency of seat reclining
                       <span class="caret"></span></button>
                       <ul class="dropdown-menu">
-                        &nbsp;&nbsp;<i class="fas fa-couch"></i>&nbsp; Frequency of seat reclining
+                          <li><a>
+                           <i class="fas fa-couch"></i>&nbsp; Frequency of seat reclining
+                         </a>
+                        </li>
                         <li class="divider"></li>
                         <li><a>Never</a></li>
                         <li><a>Once in a while</a></li>
