--- a/switching.html
+++ b/switching.html
@@ -93,7 +93,10 @@
                  <i class="fas fa-plane"></i>&nbsp;Frequency of air travel
                  <span class="caret"></span></button>
                  <ul class="dropdown-menu">
-                   &nbsp;&nbsp;<i class="fas fa-plane"></i>&nbsp;Frequency of air travel
+                   <li><a>
+                         <i class="fas fa-plane"></i>&nbsp;Frequency of air travel
+                       </a>
+                      </li>
                    <li class="divider"></li>
                    <li><a>Once a year or less</a></li>
                    <li><a>Once a month or less</a></li>
@@ -107,7 +110,10 @@
                   <i class="fas fa-birthday-cake"></i>&nbsp; Age
                   <span class="caret"></span></button>
                   <ul class="dropdown-menu">
-                    &nbsp;&nbsp;<i class="fas fa-birthday-cake"></i>&nbsp; Age
+                    <li><a>
+                         <i class="fas fa-birthday-cake"></i>&nbsp; Age
+                       </a>
+                      </li>
                     <li class="divider"></li>
                     <li><a>18-29</a></li>
                     <li><a>30-44</a></li>
@@ -120,7 +126,10 @@
                    <i class="fas fa-dollar-sign"></i>&nbsp; Income
                    <span class="caret"></span></button>
                    <ul class="dropdown-menu">
-                     &nbsp;&nbsp;<i class="fas fa-dollar-sign"></i>&nbsp; Income
+                     <li><a>
+                        <i class="fas fa-dollar-sign"></i>&nbsp; Income
+                       </a>
+                      </li>
                      <li class="divider"></li>
                      <li><a>$0 - $24,999</a></li>
                      <li><a>$25,000 - $49,999</a></li>
@@ -134,7 +143,10 @@
                     <i class="fas fa-graduation-cap"></i>&nbsp; Education
                     <span class="caret"></span></button>
                     <ul class="dropdown-menu">
-                      &nbsp;&nbsp;<i class="fas fa-graduation-cap"></i>&nbsp; Education
+                      <li><a>
+                         <i class="fas fa-graduation-cap"></i>&nbsp; Education
+                       </a>
+                      </li>
                       <li class="divider"></li>
                       <li><a>High school degree</a></li>
                       <li><a>Some college or Associate degree</a></li>
@@ -147,7 +159,10 @@
                      <i class="fas fa-map-marker"></i>&nbsp; Location
                      <span class="caret"></span></button>
                      <ul class="dropdown-menu">
-                       &nbsp;&nbsp;<i class="fas fa-map-marker"></i>&nbsp; Location
+                       <li><a>
+                          <i class="fas fa-map-marker"></i>&nbsp; Location
+                        </a>
+                       </li>
                        <li class="divider"></li>
                        <li><a>New England</a></li>
                        <li><a>East North Central</a></li>
