introduce filter functionality

--- a/children.html
+++ b/children.html
@@ -113,6 +113,7 @@
                  <span class="caret"></span></button>
                  <ul class="dropdown-menu">
                    <li><a>
+                   <li id ="freq"><a>
                          <i class="fas fa-plane"></i>&nbsp;Frequency of air travel
                        </a>
                       </li>
@@ -130,6 +131,7 @@
                   <span class="caret"></span></button>
                   <ul class="dropdown-menu">
                     <li><a>
+                    <li id ="age"><a>
                          <i class="fas fa-birthday-cake"></i>&nbsp; Age
                        </a>
                       </li>
@@ -146,6 +148,7 @@
                    <span class="caret"></span></button>
                    <ul class="dropdown-menu">
                      <li><a>
+                     <li id ="income"><a>
                         <i class="fas fa-dollar-sign"></i>&nbsp; Income
                        </a>
                       </li>
@@ -163,6 +166,7 @@
                     <span class="caret"></span></button>
                     <ul class="dropdown-menu">
                       <li><a>
+                      <li id ="degree"><a>
                          <i class="fas fa-graduation-cap"></i>&nbsp; Education
                        </a>
                       </li>
@@ -179,6 +183,7 @@
                      <span class="caret"></span></button>
                      <ul class="dropdown-menu">
                        <li><a>
+                       <li id ="location"><a>
                           <i class="fas fa-map-marker"></i>&nbsp; Location
                         </a>
                        </li>
@@ -199,7 +204,8 @@
                       <i class="fas fa-couch"></i>&nbsp; Frequency of seat reclining
                       <span class="caret"></span></button>
                       <ul class="dropdown-menu">
-                          <li><a>
+                        <li><a>
+                          <li id ="seatReq"><a>
                            <i class="fas fa-couch"></i>&nbsp; Frequency of seat reclining
                          </a>
                         </li>
