shrink bubble proportionally

--- a/children.html
+++ b/children.html
@@ -87,7 +87,8 @@
       </div>
       <div class="row mt3 ml2 mr2">
         <div class = "col-sm-8 col-md-7 col-lg-7">
-          <svg class = "ml6 mr6" id = "babyBubbleChart"></svg>
+          <svg class = "ml6 mr6" id = "babyBubbleChart">
+          </svg>
         </div>
         <div class = "col-lg-1">
         </div>
