--- a/children.html
+++ b/children.html
@@ -139,7 +139,7 @@
                     <li><a>18-29</a></li>
                     <li><a>30-44</a></li>
                     <li><a>45-60</a></li>
-                    <li><a>>60</a></li>
+                    <li><a>> 60</a></li>
                   </ul>
                </div>
                <div class="dropdown mt3">
@@ -156,18 +156,19 @@
                      <li><a>$0 - $24,999</a></li>
                      <li><a>$25,000 - $49,999</a></li>
                      <li><a>$50,000 - $99,999</a></li>
-                     <li><a>$100,000 - $149,999	</a></li>
+                     <li><a>$100,000 - $149,999</a></li>
                      <li><a>$150000</a></li>
                    </ul>
                 </div>
                 <div class="dropdown mt3">
                   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                    <i class="fas fa-graduation-cap"></i>&nbsp; Education
+                    <i class="fas fa-graduation-cap"></i>
+                      <span>&nbsp; Education</span>
                     <span class="caret"></span></button>
                     <ul class="dropdown-menu">
                       <li><a>
                       <li id ="degree"><a>
-                         <i class="fas fa-graduation-cap"></i>&nbsp; Education
+                         <i class="fas fa-graduation-cap"></i><span>&nbsp; Education</span> 
                        </a>
                       </li>
                       <li class="divider"></li>
