add html for legend

--- a/children.html
+++ b/children.html
@@ -89,6 +89,9 @@
           <svg class = "ml6 mr6" id = "babyBubbleChart"></svg>
         </div>
         <div class = "col-lg-1">
+          <div class="legend">
+            <p>Legend</p>
+          </div>
         </div>
         <div class="col-sm-8 col-md-4 col-lg-4">
           <div class="standardFilters">
