--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     <script src="./resources/js/FlyingEtiquette.js"></script>
     <script src="./resources/js/StartDiagramManager.js"></script>
     <script src="./resources/js/StartDiagramModel.js"></script>
+    <script src="resources/js/StartDiagramController.js"></script>
     <script>
             FlyingEtiquette.init()
     </script>
