improve info box display
The text about the outer ring segments inside the info box got a new color and placement to the right of the diagram. Also, when the user moves away from a segment, the text inside the info box disappears.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div id="startDiagramBox" class="startDiagramBox">
             <svg class="startDiagram"></svg>
             <div class="outerInfo">
-                <span class="outerInfoText">Äußerer Ring</span>
+                <span class="outerInfoText"></span>
             </div>
         </div>
 	</main>
