changed female and male id of all bubble diagram pages to classes

--- a/children.html
+++ b/children.html
@@ -102,11 +102,11 @@
                 </div>
               <div class ="card-content">
                 <form class ="gender-filter">
-                  <input type="checkbox" class="form-check-input" id="female">
+                  <input type="checkbox" class="form-check-input female">
                     <label class="radio-inline mr3">
                       <i class="fas fa-female"></i>
                     </label>
-                  <input type="checkbox" class="form-check-input" id ="male">
+                  <input type="checkbox" class="form-check-input male">
                    <label class="radio-inline">
                      <i class="fas fa-male"></i>
                   </label>
@@ -262,11 +262,11 @@
                   </div>
                 <div class ="card-content">
                   <form class ="gender-filter">
-                    <input type="checkbox" class="form-check-input" id="female">
+                    <input type="checkbox" class="form-check-input female">
                       <label class="radio-inline mr3">
                         <i class="fas fa-female"></i>
                       </label>
-                    <input type="checkbox" class="form-check-input" id ="male">
+                    <input type="checkbox" class="form-check-input male">
                      <label class="radio-inline">
                        <i class="fas fa-male"></i>
                     </label>
