--- a/seat.html
+++ b/seat.html
@@ -98,11 +98,11 @@
                 </div>
               <div class ="card-content">
                 <form class ="gender-filter">
-                  <input type="checkbox" class="form-check-input" id="female">
+                  <input type="checkbox" class="form-check-input female">
                     <label class="radio-inline mr3">
                       <i class="fas fa-female"></i>
                     </label>
-                  <input type="checkbox" class="form-check-input" id ="male">
+                  <input type="checkbox" class="form-check-input male">
                    <label class="radio-inline">
                      <i class="fas fa-male"></i>
                   </label>
@@ -258,11 +258,11 @@
                   </div>
                 <div class ="card-content">
                   <form class ="gender-filter">
-                    <input type="checkbox" class="form-check-input" id="female">
+                    <input type="checkbox" class="form-check-input female">
                       <label class="radio-inline mr3">
                         <i class="fas fa-female"></i>
                       </label>
-                    <input type="checkbox" class="form-check-input" id ="male">
+                    <input type="checkbox" class="form-check-input male">
                      <label class="radio-inline">
                        <i class="fas fa-male"></i>
                     </label>
@@ -418,11 +418,11 @@
                     </div>
                   <div class ="card-content">
                     <form class ="gender-filter">
-                      <input type="checkbox" class="form-check-input" id="female">
+                      <input type="checkbox" class="form-check-input female">
                         <label class="radio-inline mr3">
                           <i class="fas fa-female"></i>
                         </label>
-                      <input type="checkbox" class="form-check-input" id ="male">
+                      <input type="checkbox" class="form-check-input male">
                        <label class="radio-inline">
                          <i class="fas fa-male"></i>
                       </label>
