changed id child to class

--- a/seat.html
+++ b/seat.html
@@ -220,7 +220,7 @@
                      </div>
                      <div class="special-filter">
                       <form class ="child-filter mt3">
-                        <input type="checkbox" class="form-check-input" name="optradio" id="child">
+                        <input type="checkbox" class="form-check-input child" name="optradio">
                           <label class="radio-inline">
                             <i class="fas fa-child"></i>
                           <!--  <p id="baby-explanation">Does the participant have children?</p>-->
@@ -380,7 +380,7 @@
                        </div>
                        <div class="special-filter">
                         <form class ="child-filter mt3">
-                          <input type="checkbox" class="form-check-input" name="optradio" id="child">
+                          <input type="checkbox" class="form-check-input child" name="optradio">
                             <label class="radio-inline">
                               <i class="fas fa-child"></i>
                             <!--  <p id="baby-explanation">Does the participant have children?</p>-->
@@ -540,7 +540,7 @@
                          </div>
                          <div class="special-filter">
                           <form class ="child-filter mt3">
-                            <input type="checkbox" class="form-check-input" name="optradio" id="child">
+                            <input type="checkbox" class="form-check-input child" name="optradio">
                               <label class="radio-inline">
                                 <i class="fas fa-child"></i>
                               <!--  <p id="baby-explanation">Does the participant have children?</p>-->
