--- a/children.html
+++ b/children.html
@@ -224,7 +224,7 @@
                      </div>
                      <div class="special-filter">
                       <form class ="child-filter mt3">
-                        <input type="checkbox" class="form-check-input" name="optradio" id="child">
+                        <input type="checkbox" class="form-check-input child" name="optradio">
                           <label class="radio-inline">
                             <i class="fas fa-child"></i>
                           <!--  <p id="baby-explanation">Does the participant have children?</p>-->
@@ -384,7 +384,7 @@
                        </div>
                        <div class="special-filter">
                         <form class ="child-filter mt3">
-                          <input type="checkbox" class="form-check-input" name="optradio" id="child">
+                          <input type="checkbox" class="form-check-input child" name="optradio">
                             <label class="radio-inline">
                               <i class="fas fa-child"></i>
                             <!--  <p id="baby-explanation">Does the participant have children?</p>-->
