changed id height to class

--- a/children.html
+++ b/children.html
@@ -231,7 +231,7 @@
                           </label>
                      </form>
                      <div class="slidecontainer mt2">
-                       <input type="range" min="<5" max=">6'6" value="0" class="slider mt2" id="height">
+                       <input type="range" min="<5" max=">6'6" value="0" class="slider mt2 height">
                        <p class="current-value mt2">Height: </p>
                      </div>
                   </div>
@@ -391,7 +391,7 @@
                             </label>
                        </form>
                        <div class="slidecontainer mt2">
-                         <input type="range" min="<5" max=">6'6" value="0" class="slider mt2" id="height">
+                         <input type="range" min="<5" max=">6'6" value="0" class="slider mt2 height">
                          <p class="current-value mt2">Height: </p>
                        </div>
                     </div>
