--- a/seat.html
+++ b/seat.html
@@ -227,7 +227,7 @@
                           </label>
                      </form>
                      <div class="slidecontainer mt2">
-                       <input type="range" min="<5" max=">6'6" value="0" class="slider mt2" id="height">
+                       <input type="range" min="<5" max=">6'6" value="0" class="slider mt2 height">
                        <p class="current-value mt2">Height: </p>
                      </div>
                   </div>
@@ -387,7 +387,7 @@
                             </label>
                        </form>
                        <div class="slidecontainer mt2">
-                         <input type="range" min="<5" max=">6'6" value="0" class="slider mt2" id="height">
+                         <input type="range" min="<5" max=">6'6" value="0" class="slider mt2 height">
                          <p class="current-value mt2">Height: </p>
                        </div>
                     </div>
@@ -547,7 +547,7 @@
                               </label>
                          </form>
                          <div class="slidecontainer mt2">
-                           <input type="range" min="<5" max=">6'6" value="0" class="slider mt2" id="height">
+                           <input type="range" min="<5" max=">6'6" value="0" class="slider mt2 height">
                            <p class="current-value mt2">Height: </p>
                          </div>
                       </div>
