add missing heading

--- a/reclining.html
+++ b/reclining.html
@@ -72,6 +72,11 @@
 
 
 	<main>
+    <div class="row mt3 ml5">
+      <div class = "col-sm-12 col-md-12 col-lg-12">
+        <h3>Seat Reclining</h3>
+      </div>
+    </div>
     <div class ="questionView">
       <div class="row mt2 ml5">
         <div class = "col-sm-8 col-md-7 col-lg-7">
