added info from dots to info-box
When the user hovers over a dot, all the answers given by the participant as well as the corresponding questions appear in the info-box to the right of the diagram. The information for the inner and outer ring is now being displayed better.

--- a/index.html
+++ b/index.html
@@ -69,13 +69,17 @@
         <div id="startDiagramBox" class="startDiagramBox">
             <svg class="startDiagram"></svg>
             <div class="infoBox">
-                <div class="outerInfo">
+                <div class="outerInfo mb1">
                     <span class="infoBoxText">Question (Outer Ring):</span>
                     <span class="outerInfoText"></span>
                 </div>
-                <div class="innerInfo">
+                <div class="innerInfo mb1">
                     <span class="infoBoxText">Answer (Inner Ring):</span>
                     <span class="innerInfoText"></span>
+                </div>
+                <div class="dotsInfo">
+                    <span class="infoBoxText">Participant Answers:</span>
+                    <span class="dotsInfoText"></span>
                 </div>
             </div>
         </div>
