--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="" content="Visualization of survey data about etiquette while flying">
-    <title>IV SoSe 18</title>
+    <title>Home</title>
     <link rel="shortcut icon" href="resources/assets/favicon.png" type="image/png"/>
     <link rel="icon" href="resources/assets/favicon.png" type="image/png"/>
     <script src="vendors/jquery/dist/jquery.min.js"></script>
