add imprint and about

--- a/index.html
+++ b/index.html
@@ -20,12 +20,6 @@
 </head>
 
 <body>
-
-	<header>
-
-	</header>
-
-  <!-- Fixed navbar -->
   <div class="row">
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
@@ -95,4 +89,11 @@
             FlyingEtiquette.init()
     </script>
 </body>
+<footer>
+  <div>
+    <a href="imprint.html">Imprint&nbsp;</a>
+    <span>|&nbsp;</span>
+    <a href="about.html">About</a>
+  </div>
+</footer>
 </html>
