--- a/violations.html
+++ b/violations.html
@@ -21,12 +21,6 @@
 </head>
 
 <body>
-
-
-  <header>
-
-  </header>
-
   <!-- Fixed navbar -->
   <div class="row">
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -374,5 +368,11 @@
     BubbleDiagram.init();
   </script>
 </body>
-
+<footer>
+  <div>
+    <a href="imprint.html">Imprint&nbsp;</a>
+    <span>|&nbsp;</span>
+    <a href="about.html">About</a>
+  </div>
+</footer>
 </html>
